# esp32_ble_debugger

./: .gitmodules  CMakeLists.txt  README.md
application/: CMakeLists.txt
application/main/: CMakeLists.txt  ble_debugger.c
components/ble/: CMakeLists.txt
components/ble/inc/: ble.h  gap.h  gatt.h
components/ble/priv_inc/: ble_utils.h  gap_priv.h  gatt_priv.h  mac_utils.h
components/ble/src/: ble.c  ble_utils.c  gap.c  gatt.c  mac_utils.c
components/cli/: CMakeLists.txt
components/cli/inc/: cli.h
components/cli/priv_inc/: commands.h
components/cli/src/: cli.c  commands.c
